# super-prompt

./: .cursorignore  .gitignore  .npmignore  =0.4.0  =1.0.0  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  CHANGELOG.md  CLEANUP_PLAN.md  COMMANDS.md  MIGRATION_COMPLETE.md  README.md  SUPER_PROMPT_SETUP_REPORT.md  cdw0424-super-prompt-1.0.1.tgz  cdw0424-super-prompt-2.3.0.tgz  cdw0424-super-prompt-2.9.10.tgz  cdw0424-super-prompt-2.9.11.tgz  cdw0424-super-prompt-2.9.12.tgz  cdw0424-super-prompt-2.9.13.tgz  cdw0424-super-prompt-2.9.14.tgz  cdw0424-super-prompt-2.9.15.tgz  cdw0424-super-prompt-2.9.16.tgz  cdw0424-super-prompt-2.9.17.tgz  cdw0424-super-prompt-2.9.18.tgz  cdw0424-super-prompt-2.9.19.tgz  cdw0424-super-prompt-2.9.20.tgz  cdw0424-super-prompt-2.9.21.tgz  cdw0424-super-prompt-2.9.22.tgz  cdw0424-super-prompt-2.9.23.tgz  cdw0424-super-prompt-2.9.26.tgz  cdw0424-super-prompt-2.9.5.tgz  cdw0424-super-prompt-2.9.6.tgz  cdw0424-super-prompt-2.9.7.tgz  cdw0424-super-prompt-2.9.8.tgz  cdw0424-super-prompt-2.9.9.tgz  cdw0424-super-prompt-3.1.0.tgz  cdw0424-super-prompt-3.1.29.tgz  cdw0424-super-prompt-3.1.30.tgz  cdw0424-super-prompt-3.1.31.tgz  (+38 more)
.claude/: settings.local.json
.codex/: agents.md  bootstrap_prompt_en.txt  personas.py  router-check.sh
.cursor/: mcp.json  mcp.json.backup  tools.json
.cursor/rules/: 001-sdd-core.mdc  (+10 more)
.super-prompt/: cli.py  enhanced_cli.py  execution_context.json  execution_plan_architect_error_recovery.json  execution_plan_dev_error_recovery.json  execution_plan_frontend_error_recovery.json  execution_plan_seq-ultra_error_recovery.json  mode.json  unified_cli.py
docs/: architecture-v3.md  architecture-v5.md  claude-operations.md  claude-persona-guide.md  cleanup_status.md  codex-amr-usage.md  codex-amr.md  codex-mcp-setting-guide.md  cursor-integration-guide.md  cursor-mcp-setting-guide.md  gpt5-persona-guide.md  gpt_prompt_guide.md  grok-persona-guide.md  grok_prompt_guide.md  grok_promt_guide.md  npm-cache-fix.md
memory-bank/: activeContext.md  progress.md  projectbrief.md
package/: CHANGELOG.md  README.md  install.js  package.json
persona_rules/: persona_make_rules.md
personas/: manifest.yaml
prompts/: codex_amr_bootstrap_prompt_en.txt
python-packages/super-prompt-core/: README.md  pyproject.toml  pytest.ini  super-prompt-core-5.1.6.tgz
python-packages/super-prompt-core/super_prompt/: __init__.py  cli.py  cli.py.backup  high_mode.py  mcp_app.py  mcp_client.py  mcp_register.py  mcp_server_new.py  mcp_server_new.py.backup  mcp_stdio.py  mode_store.py  modes.py  paths.py
python-packages/super-prompt-core/super_prompt/adapters/: __init__.py  codex_adapter.py  cursor_adapter.py
python-packages/super-prompt-core/super_prompt/analysis/: project_analyzer.py
python-packages/super-prompt-core/super_prompt/codex/: __init__.py  client.py
python-packages/super-prompt-core/super_prompt/commands/: service_planning_tools.py
python-packages/super-prompt-core/super_prompt/context/: cache.py  collector.py
python-packages/super-prompt-core/super_prompt/core/: mcp_setup.py  memory_manager.py
python-packages/super-prompt-core/super_prompt/engine/: __init__.py  amr.py  execution_pipeline.py
python-packages/super-prompt-core/super_prompt/personas/: analyzer_prompts.py  architect_prompts.py  defaults.py  frontend_prompts.py  high_prompts.py  pipeline_manager.py
python-packages/super-prompt-core/super_prompt/personas/tools/: __init__.py  system_tools.py
python-packages/super-prompt-core/super_prompt/pipeline/: config.py  executor.py
python-packages/super-prompt-core/super_prompt/prompts/: gpt_prompts.py  grok_prompts.py  workflow_executor.py
python-packages/super-prompt-core/super_prompt/sdd/: __init__.py  architecture.py  gates.py  plan_processor.py  scaffolding.py  specify_processor.py  tasks_processor.py
python-packages/super-prompt-core/super_prompt/tools/: __init__.py  registry.py
python-packages/super-prompt-core/super_prompt/utils/: authorization.py  helpers.py  progress.py  span_manager.py
python-packages/super-prompt-core/super_prompt/validation/: quality_checker.py
scripts/: audit-all.mjs  mode-smoke.sh  npm-cache-fix.sh  prepare-python-dist.js
src/: doctor.js  mcp-client.js
templates/: simple_cli.py  simple_tag_executor.py
test/: amr-router.test.js
(+260 files in other folders)
